# performance_analysis

./: .gitignore  README.md  main.py  pyproject.toml
src/parser/: parser_file_csv.py
src/reports/: base_report.py  report.py
students/: students2.csv
tests/: conftest.py  test_parser_file_csv.py  test_report.py
